<resources>
    <string name="app_name">Shared Taxi Together</string>
    <string name="joinMembership">아직 회원이 아니신가요?</string>
    <string name="findPasswd">비밀번호를 잊으셨나요?</string>
    <string name="email">학교메일</string>
    <string name="emailExample">example@tukorea.ac.kr</string>
    <string name="emailAddress"> tukorea.ac.kr</string>

    <string name="password">비밀번호</string>
    <string name="passwordConfirm">비밀번호확인</string>
    <string name="findPasswdTitle">비밀번호찾기</string>

    <string name="phone">전화번호</string>
    <string name="phoneExample">01012345678</string>
    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="nickname">닉네임</string>

    <string name="cancel">취소</string>
    <string name="OK">확인</string>
    <string name="signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="modify">정보수정</string>
    <string name="score">점수 : </string>



</resources>