<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:hint="@string/emailExample"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:inputType="phone"
                android:paddingStart="8dp" />
        </LinearLayout>

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="15dp"-->
        <!--            android:gravity="center">-->

        <!--            <TextView-->
        <!--                android:layout_width="100dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="8dp"-->
        <!--                android:text="비밀번호"-->
        <!--                android:textSize="18sp" />-->

        <!--            <EditText-->
        <!--                android:id="@+id/editPassword"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="50dp"-->
        <!--                android:layout_gravity="center"-->
        <!--                android:layout_marginHorizontal="8dp"-->
        <!--                android:layout_weight="2"-->
        <!--                android:inputType="textPassword"-->
        <!--                android:paddingStart="8dp" />-->
        <!--        </LinearLayout>-->


        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <!--            <TextView-->
        <!--                android:layout_width="100dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="8dp"-->
        <!--                android:layout_marginBottom="5dp"-->
        <!--                android:text="비밀번호확인"-->
        <!--                android:textSize="18sp" />-->

        <!--            <EditText-->
        <!--                android:id="@+id/editPasswordConfirm"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="50dp"-->
        <!--                android:layout_gravity="center"-->
        <!--                android:layout_marginHorizontal="8dp"-->
        <!--                android:layout_marginBottom="10dp"-->
        <!--                android:inputType="textPassword"-->
        <!--                android:paddingStart="8dp" />-->
        <!--        </LinearLayout>-->

        <Button
            android:id="@+id/btnResetPasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="비밀번호 찾기"
            android:textColor="@color/colorGray8c8c"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/passwdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            tools:text="비밀번호" />
    </LinearLayout>
</LinearLayout>